--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.5.1"
+    "sequelize": "^6.5.1",
+    "socket.io": "^2.3.0",
+    "ws": "^7.4.4"
   }
 }
