--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "Cosmin Borsan",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.7",
     "sequelize": "^6.5.1",
     "socket.io": "^2.3.0",
     "ws": "^7.4.4"
